<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="15dp"
    android:background="@drawable/custom_rect"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18dp"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:text="@string/people"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/num_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:text="@string/contact"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/contact_of_reporter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:text="Location"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:text="@string/lat"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:text="@string/lon"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"/>











</LinearLayout>